--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="row">
                         <div class="col-xl-8">
                             <div class="silder-content slider-text">
-                                <h1 class="white-color" data-animation="fadeInDown" data-delay=".3s">Jason <br> Haughton</h1>
+                                <h1 class="white-color" data-animation="fadeInDown" data-delay=".3s">Brandon <br> Park</h1>
                                 <h4 class="white-color cd-headline clip is-full-width" data-animation="fadeInDown" data-delay=".6s">
                                     <span>Professional</span>
                                     <span class="cd-words-wrapper">
