added name to various sections

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <div class="main-menu">
                                 <nav class="navbar navbar-expand-lg">
                                     <a class="navbar-brand" href="index.html">
-                                        <h3>TOFA</h3>
+                                        <h3>Brandon Park</h3>
                                     </a>
                                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                         aria-expanded="false" aria-label="Toggle navigation">
@@ -104,11 +104,11 @@
                             <div class="silder-content slider-text">
                                 <h1 class="white-color" data-animation="fadeInDown" data-delay=".3s">Brandon <br> Park</h1>
                                 <h4 class="white-color cd-headline clip is-full-width" data-animation="fadeInDown" data-delay=".6s">
-                                    <span>Professional</span>
+                                    <span>Front-End</span>
                                     <span class="cd-words-wrapper">
                                         <b class="is-visible">Developer</b>
-                                        <b>product</b>
-                                        <b>idea</b>
+                                        <b>Engineer</b>
+                                        <b>Designer</b>
                                     </span>
                                 </h4>
                             </div>
@@ -131,9 +131,9 @@
                     <div class="col-xl-7 col-lg-7">
                         <div class="about-me-info mt-30 mb-30 pl-30">
                             <span>Hello</span>
-                            <h2>I am mark jon, Frontend
-                                <br> Web Developer and Designder
-                                <br> From Panjab, India. </h2>
+                            <h2>I am Brandon Park,
+                                <br> Front-End Web Developer
+                                </h2>
                             <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life
                                 One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far
                                 World of Grammar.</p>
@@ -1103,7 +1103,7 @@
                                     </div>
                                     <div class="contact-text">
                                         <h5>Location</h5>
-                                        <span>123 Business Avenue, Hoston, USA</span>
+                                        <span>Orange County, CA</span>
                                     </div>
                                 </li>
                                 <li>
@@ -1111,7 +1111,7 @@
                                         <i class="ti-headphone"></i>
                                     </div>
                                     <div class="contact-text">
-                                        <h5>Call Us</h5>
+                                        <h5>Contact Me</h5>
                                         <span>+0123456789</span>
                                     </div>
                                 </li>
@@ -1120,7 +1120,7 @@
                                         <i class="ti-email"></i>
                                     </div>
                                     <div class="contact-text">
-                                        <h5>Email Us</h5>
+                                        <h5>Email Me</h5>
                                         <span>support@gmail.com</span>
                                     </div>
                                 </li>
@@ -1147,7 +1147,7 @@
                                     <a href="#"><i class="ti-pinterest"></i></a>
                                     <a href="#"><i class="ti-instagram"></i></a>
                                 </div>
-                                <p>Copyright- 2018 BasicTheme, All Right Reserved</p>
+                                <p>Copyright- 2019 brandontravispark.com, All Right Reserved</p>
                             </div>
                         </div>
                     </div>
