added pictures and about me content

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <!-- header end -->
 
         <!-- slider start -->
-        <div id="home" class="slider-area hero youtube-bg cover" data-overlay="5" style="background-image: url(img/slider/slide12.jpg)">
+        <div id="home" class="slider-area hero youtube-bg cover" data-overlay="5" style="background-image: url(img/keyboard.jpg)">
             <div class="home-arrow">
                 <a href="#about" class="smoth-scroll">
                     <i class="fa fa-angle-double-down"></i>
@@ -125,19 +125,25 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-5">
                         <div class="about-me mb-30">
-                            <img src="img/bg/me.png" alt="">
+                            <img src="img/profile_pic.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-xl-7 col-lg-7">
                         <div class="about-me-info mt-30 mb-30 pl-30">
-                            <span>Hello</span>
+                            <!-- <span>Hello</span> -->
                             <h2>I am Brandon Park,
                                 <br> Front-End Web Developer
                                 </h2>
-                            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life
-                                One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far
-                                World of Grammar.</p>
-                            <p>We have awesome team for your next project. </p>
+                            <p>Hello, I'm Brandon Park and I am very passionate about coding, software, and how AI can be implemented to make huge impacts within the development industry.
+                                I've always had a love for programming ever since I touched a computer. Upon entering Chapman University I was still intrigued by coding but it seemed out of
+                                reach and thus I pursued a degree in my second love, Marketing.</p>
+                            <!-- <p>I recently graduated from Chapman University majoring in Marketing. My prior internships regarding marketing have allowed me to use digital marketing campaigns
+                                to boost site traffic. I focused on SEO keyword implementation and content creation through blog posts and social media. I had the pleasure of utilizing
+                                HTML and CSS while updating landing pages and various content pages as well.</p> -->
+                            <p>Currently, I am living out my dream by learning web development over at Learning Fuze. My future goal is to incorporate my love for technology
+                                while creating meaningful projects utilizing AI. In addition, my strong interest in Digital Marketing and skills in Web Development
+                                will make me a great asset to your development team. I would love for the opportunity to develop my skills even more or even
+                                to meet new mentors/seniors that will mold me and guide me to the right path in becoming a great developer.</p>
                             <div class="info-me mb-30">
                                 <h6>
                                     <span>Mail</span>: sohelrana@gmail.com</h6>
