initial changes for skills section

--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
                                 to meet new mentors/seniors that will mold me and guide me to the right path in becoming a great developer.</p>
                             <div class="info-me mb-30">
                                 <h6>
-                                    <span>Mail</span>: sohelrana@gmail.com</h6>
+                                    <span>Mail</span>: brandonpark206@gmail.com</h6>
                                 <h6>
                                     <span>Phone</span>: +123456789</h6>
                             </div>
-                            <a href="#contact" class="btn smoth-scroll">Hire Me</a>
+                            <a href="#contact" class="btn smoth-scroll">Message Me</a>
                         </div>
                     </div>
                 </div>
@@ -286,28 +286,73 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-8 offset-lg-2 offset-xl-3">
                         <div class="area-title text-center mb-70">
-                            <h2>What i Do. </h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipi sunt nisi id magni digni</p>
+                            <h2>Skills</h2>
+                            <p>Technologies and Tools I have used for my projects</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6  mb-50">
-                        <div class="service-box wow fadeIn" data-wow-delay=".3s">
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/html5.png" alt="HTML">
+                            <h5>HTML 5</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/css3.png" alt="CSS">
+                            <h5>CSS 3</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/js.png" alt="JS">
+                            <h5>JS</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/reactjs.png" alt="ReactJS">
+                            <h5>ReactJS</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/jquery.png" alt="jQuery">
+                            <h5>jQuery</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/bootstrap.png" alt="bootstrap">
+                            <h5>Bootstrap</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/github.png" alt="Github">
+                            <h5>Github</h5>
+                        </div>
+                    </div>
+
+                        <!-- <div class="service-box wow fadeIn" data-wow-delay=".3s">
                             <div class="service-icon">
+                                <img src=".//img/skills icons/HTML 5.png" alt="HTML">
                                 <span class="icon icon-Book"></span>
                             </div>
                             <div class="service-content">
-                                <h3>App Development</h3>
+                                <h3>HTML 5</h3>
                                 <p>What really sets Creative Agency apart from other agencies is our superior customer centric focus,
                                     our long-term, highly trusted professional partner ethos and above all</p>
                             </div>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div> -->
                     <div class="col-md-6  mb-50">
                         <div class="service-box wow fadeIn" data-wow-delay=".5s">
                             <div class="service-icon">
-                                <span class="icon icon-MusicMixer"></span>
+                                <h4>CSS</h4>
+                                <!-- <img src=".//img/skills icons/css3.png" alt="CSS"> -->
+                                <!-- <span class="icon icon-MusicMixer"></span> -->
                             </div>
                             <div class="service-content">
                                 <h3>Web Development</h3>
