brandon-style.css commit to fix skills section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <link rel="stylesheet" href="css/slick.css">
         <link rel="stylesheet" href="css/default.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/brandon-style.css">
         <link rel="stylesheet" href="css/responsive.css">
     </head>
     <body>
