--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="manifest" href="site.webmanifest">
-		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="img/brandon.png">
         <!-- Place favicon.png in the root directory -->
 
 		<!-- CSS here -->
@@ -307,14 +307,8 @@
                     </div>
                     <div class="col-md-3 skills-container">
                         <div class = "skill-icon-area">
-                            <img class = "skills-icon" src=".//img/skills icons/js.png" alt="JS">
+                            <img class = "skills-icon" src=".//img/skills icons/js.jpg" alt="JS">
                             <h5>JS</h5>
-                        </div>
-                    </div>
-                    <div class="col-md-3 skills-container">
-                        <div class = "skill-icon-area">
-                            <img class = "skills-icon" src=".//img/skills icons/reactjs.png" alt="ReactJS">
-                            <h5>ReactJS</h5>
                         </div>
                     </div>
                     <div class="col-md-3 skills-container">
@@ -325,14 +319,50 @@
                     </div>
                     <div class="col-md-3 skills-container">
                         <div class = "skill-icon-area">
-                            <img class = "skills-icon" src=".//img/skills icons/bootstrap.png" alt="bootstrap">
-                            <h5>Bootstrap</h5>
+                            <img class = "skills-icon" src=".//img/skills icons/reactjs.png" alt="ReactJS">
+                            <h5>ReactJS</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/redux.png" alt="Redux">
+                            <h5>Redux</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/nodejs.png" alt="NodeJS">
+                            <h5>Node JS</h5>
                         </div>
                     </div>
                     <div class="col-md-3 skills-container">
                         <div class = "skill-icon-area">
                             <img class = "skills-icon" src=".//img/skills icons/github.png" alt="Github">
                             <h5>Github</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/materializecss.png" alt="MaterializeCss">
+                            <h5>Materialize</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/bootstrap.png" alt="bootstrap">
+                            <h5>Bootstrap</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/photoshop.jpg" alt="Photoshop">
+                            <h5>Photoshop</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <img class = "skills-icon" src=".//img/skills icons/illustratorCircle.png" alt="Illustrator">
+                            <h5>Illustrator</h5>
                         </div>
                     </div>
 
@@ -1199,6 +1229,7 @@
                                     <a href="#"><i class="ti-pinterest"></i></a>
                                     <a href="#"><i class="ti-instagram"></i></a>
                                 </div>
+                                <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
                                 <p>Copyright- 2019 brandontravispark.com, All Right Reserved</p>
                             </div>
                         </div>
