--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     </div>
                     <div class="col-md-3 skills-container">
                         <div class = "skill-icon-area">
-                            <img class = "skills-icon" src=".//img/skills icons/photoshop.jpg" alt="Photoshop">
+                            <img class = "skills-icon" src=".//img/skills icons/photoshopCircle.png" alt="Photoshop">
                             <h5>Photoshop</h5>
                         </div>
                     </div>
