--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/brandon-style.css">
         <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -138,9 +139,9 @@
                             <p>Hello, I'm Brandon Park and I am very passionate about coding, software, and how AI can be implemented to make huge impacts within the development industry.
                                 I've always had a love for programming ever since I touched a computer. Upon entering Chapman University I was still intrigued by coding but it seemed out of
                                 reach and thus I pursued a degree in my second love, Marketing.</p>
-                            <!-- <p>I recently graduated from Chapman University majoring in Marketing. My prior internships regarding marketing have allowed me to use digital marketing campaigns
+                            <p>I recently graduated from Chapman University majoring in Marketing. My prior internships regarding marketing have allowed me to use digital marketing campaigns
                                 to boost site traffic. I focused on SEO keyword implementation and content creation through blog posts and social media. I had the pleasure of utilizing
-                                HTML and CSS while updating landing pages and various content pages as well.</p> -->
+                                HTML and CSS while updating landing pages and various content pages as well.</p>
                             <p>Currently, I am living out my dream by learning web development over at Learning Fuze. My future goal is to incorporate my love for technology
                                 while creating meaningful projects utilizing AI. In addition, my strong interest in Digital Marketing and skills in Web Development
                                 will make me a great asset to your development team. I would love for the opportunity to develop my skills even more or even
@@ -341,6 +342,12 @@
                             <h5>Github</h5>
                         </div>
                     </div>
+                    <!-- <div class="col-md-3 skills-container">
+                        <div class = "skill-icon-area">
+                            <i class="devicon-skills devicon-amazonwebservices-plain-wordmark"></i>
+                            <h5>Github</h5>
+                        </div>
+                    </div> -->
                     <div class="col-md-3 skills-container">
                         <div class = "skill-icon-area">
                             <img class = "skills-icon" src=".//img/skills icons/materializecss.png" alt="MaterializeCss">
@@ -448,7 +455,7 @@
         <div class="counter-area pt-150 pb-120" style="background-image:url(img/bg/bg7.jpg)">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-xl-4 col-lg-3 col-md-6 col-sm-6">
                         <div class="counter-wrapper text-center mb-30 wow fadeInUp" data-wow-delay=".3s">
                             <div class="counter-icon">
                                 <span class="icon icon-Starship"></span>
@@ -459,7 +466,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-xl-4 col-lg-3 col-md-6 col-sm-6">
                         <div class="counter-wrapper text-center mb-30 wow fadeInUp" data-wow-delay=".6s">
                             <div class="counter-icon">
                                 <span class="icon icon-Cup"></span>
@@ -470,7 +477,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-xl-4 col-lg-3 col-md-6 col-sm-6">
                         <div class="counter-wrapper text-center mb-30 wow fadeInUp" data-wow-delay=".9s">
                             <div class="counter-icon">
                                 <span class="icon icon-Like"></span>
@@ -481,7 +488,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-xl-4 col-lg-3 col-md-6 col-sm-6">
                         <div class="counter-wrapper text-center mb-30 wow fadeInUp" data-wow-delay="1.2s">
                             <div class="counter-icon">
                                 <span class="icon icon-CompactCamera"></span>
@@ -502,34 +509,32 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-8 offset-lg-2 offset-xl-3">
                         <div class="area-title text-center mb-70">
-                            <h2>Latest Work. </h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipi sunt nisi id magni digni</p>
+                            <h2>Latest Projects</h2>
+                            <!-- <p>lorem</p> -->
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="portfolio-menu mb-40 text-center">
-                            <button class="active" data-filter="*">ALL</button>
-                            <button data-filter=".cat1">Web</button>
-                            <button data-filter=".cat2">Graphics</button>
+                            <!-- <button class="active" data-filter="*"></button> -->
+                            <button data-filter=".cat1">Web Apps</button>
+                            <!-- <button data-filter=".cat2">Graphic Design</button> -->
                             <button data-filter=".cat3">Design</button>
                             <button data-filter=".cat4">Logo</button>
                         </div>
                     </div>
                 </div>
                 <div class="row grid">
-                    <div class="col-xl-3 col-lg-4 col-md-6 grid-item cat2 cat4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb">
                                 <img src="img/portfolio/port6.jpg" alt="">
                             </div>
-                            <div class="portfolio-content">
-                                <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal6">Creative Photography</a>
-                                </h3>
-                                <span>Photo, Brand</span>
-                            </div>
+                            <a href="#" data-toggle="modal" data-target="#popup-modal6" class="portfolio-content">
+                                <h3>PocketCards</h3>
+                                <!-- <span>Photo, Brand</span> -->
+                            </a>
                         </div>
                         <!-- Modal content start -->
                         <div class="modal fade" id="popup-modal6" tabindex="-1" role="dialog" aria-hidden="true">
@@ -565,7 +570,7 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 grid-item cat1 cat4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".5s">
                             <div class="portfolio-thumb">
                                 <img src="img/portfolio/port5.jpg" alt="">
@@ -611,7 +616,7 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 grid-item cat3 cat4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".7s">
                             <div class="portfolio-thumb">
                                 <img src="img/portfolio/port7.jpg" alt="">
@@ -657,7 +662,7 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 grid-item cat1 cat2">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat2">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".9s">
                             <div class="portfolio-thumb">
                                 <img src="img/portfolio/port8.jpg" alt="">
@@ -703,7 +708,7 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 grid-item cat3 cat4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.1s">
                             <div class="portfolio-thumb">
                                 <img src="img/portfolio/port1.jpg" alt="">
@@ -748,7 +753,7 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 grid-item cat1 cat4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.3s">
                             <div class="portfolio-thumb">
                                 <img src="img/portfolio/port3.jpg" alt="">
@@ -793,7 +798,7 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 grid-item cat2 cat1">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat1">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.5s">
                             <div class="portfolio-thumb">
                                 <img src="img/portfolio/port4.jpg" alt="">
@@ -839,7 +844,7 @@
                         </div>
                         <!-- Modal content end -->
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 grid-item cat2 cat3">
+                    <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat3">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.7s">
                             <div class="portfolio-thumb">
                                 <img src="img/portfolio/port2.jpg" alt="">
