--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="portfolio-menu mb-40 text-center">
-                            <!-- <button class="active" data-filter="*"></button> -->
+                            <button class="active" data-filter="*">ALL</button>
                             <button data-filter=".cat1">Web Apps</button>
                             <!-- <button data-filter=".cat2">Graphic Design</button> -->
                             <button data-filter=".cat3">Design</button>
@@ -615,16 +615,14 @@
                         <!-- Modal content end -->
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
-                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".5s">
+                        <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb">
-                                <img src="img/portfolio/port5.jpg" alt="">
+                                <img src="img/portfolio/port6.jpg" alt="">
                             </div>
-                            <div class="portfolio-content">
-                                <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal5">Redesign Work</a>
-                                </h3>
-                                <span>Design, Brand</span>
-                            </div>
+                            <a href="#" data-toggle="modal" data-target="#popup-modal6" class="portfolio-content">
+                                <h3>Grace Hopper</h3>
+                                <!-- <span>Photo, Brand</span> -->
+                            </a>
                         </div>
                         <!-- Modal content start -->
                         <div class="modal fade" id="popup-modal5" tabindex="-1" role="dialog" aria-hidden="true">
