initial adding of project images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="manifest" href="site.webmanifest">
-        <link rel="shortcut icon" type="image/x-icon" href="img/brandon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="img/b-icon.png">
         <!-- Place favicon.png in the root directory -->
 
 		<!-- CSS here -->
@@ -125,9 +125,9 @@
         <div id="about" class="features-area pt-120 pb-90">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-5 col-lg-5">
+                    <div class="col-xl-5 col-lg-5 portfolio-img ">
                         <div class="about-me mb-30">
-                            <img src="img/profile_pic.jpg" alt="">
+                            <img src="img/portfolio picture.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-xl-7 col-lg-7">
@@ -573,7 +573,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb">
-                                <img src="img/portfolio/port6.jpg" alt="">
+                                <img src="img/pocketcards1.png" alt="">
                             </div>
                             <a href="#" data-toggle="modal" data-target="#popup-modal6" class="portfolio-content">
                                 <h3>PocketCards</h3>
@@ -588,7 +588,7 @@
                                         <div class="project-media" style="background-image:url(img/portfolio/port6.jpg)"></div>
                                         <div class="view-project-content pt-10">
                                             <div class="modal-title">
-                                                <h2>Creative Photography</h2>
+                                                <h2>PocketCards</h2>
 
                                             </div>
                                             <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
@@ -604,7 +604,11 @@
                                                     <span>Services</span>Design, Art Direction, Website</li>
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
-                                                    <a href="#">www.project.com</a>
+                                                    <a href="www.mypocketcards.com">www.mypocketcards.com</a>
+                                                </li>
+                                                <li class="text-uppercase">
+                                                    <span>Github</span>
+                                                    <a href="https://github.com/Learning-Fuze/c918_uberquizlet">https://github.com/Learning-Fuze/c918_uberquizlet</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -617,7 +621,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
                             <div class="portfolio-thumb">
-                                <img src="img/portfolio/port6.jpg" alt="">
+                                <img src="img/grace-hopper1.png" alt="">
                             </div>
                             <a href="#" data-toggle="modal" data-target="#popup-modal6" class="portfolio-content">
                                 <h3>Grace Hopper</h3>
