fixing h3 for web apps section

--- a/index.html
+++ b/index.html
@@ -575,10 +575,12 @@
                             <div class="portfolio-thumb">
                                 <img src="img/pocketcards1.png" alt="">
                             </div>
-                            <a href="#" data-toggle="modal" data-target="#popup-modal6" class="portfolio-content">
-                                <h3>PocketCards</h3>
-                                <!-- <span>Photo, Brand</span> -->
-                            </a>
+                            <div class="portfolio-content">
+                                <h3>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal6" class="portfolio-content">PocketCards</a>
+                                </h3>
+                                <span>A mobile-first application that allows you create, read, delete, and update flashcards to study online.</span>
+                            </div>
                         </div>
                         <!-- Modal content start -->
                         <div class="modal fade" id="popup-modal6" tabindex="-1" role="dialog" aria-hidden="true">
