fixing links for web applications section

--- a/index.html
+++ b/index.html
@@ -577,9 +577,9 @@
                             </div>
                             <div class="portfolio-content">
                                 <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal6" class="portfolio-content">PocketCards</a>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal6">PocketCards</a>
                                 </h3>
-                                <span>A mobile-first application that allows you create, read, delete, and update flashcards to study online.</span>
+                                <span>A mobile-first flashcard library that allows you to create, read, delete, and update flashcards to learn online.</span>
                             </div>
                         </div>
                         <!-- Modal content start -->
@@ -625,10 +625,12 @@
                             <div class="portfolio-thumb">
                                 <img src="img/grace-hopper1.png" alt="">
                             </div>
-                            <a href="#" data-toggle="modal" data-target="#popup-modal6" class="portfolio-content">
-                                <h3>Grace Hopper</h3>
-                                <!-- <span>Photo, Brand</span> -->
-                            </a>
+                            <div class="portfolio-content">
+                                <h3>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal6">Grace Hopper</a>
+                                </h3>
+                                <span>An event page that helps to find professional networking events for women in tech</span>
+                            </div>
                         </div>
                         <!-- Modal content start -->
                         <div class="modal fade" id="popup-modal5" tabindex="-1" role="dialog" aria-hidden="true">
