clicking on any part of the div, text, or image, opens up the corresponding modal

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                 <div class="row grid">
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
-                            <div class="portfolio-thumb">
+                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal6">
                                 <img src="img/pocketcards1.png" alt="">
                             </div>
-                            <div class="portfolio-content">
+                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal6">
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal6">PocketCards</a>
                                 </h3>
@@ -196,10 +196,10 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".3s">
-                            <div class="portfolio-thumb">
+                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal6">
                                 <img src="img/grace-hopper1.png" alt="">
                             </div>
-                            <div class="portfolio-content">
+                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal6">
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal6">Grace Hopper</a>
                                 </h3>
@@ -242,10 +242,10 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".7s">
-                            <div class="portfolio-thumb">
+                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal7">
                                 <img src="img/portfolio/port7.jpg" alt="">
                             </div>
-                            <div class="portfolio-content">
+                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal7">
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal7">Beautifully Designed</a>
                                 </h3>
@@ -288,10 +288,10 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat2">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".9s">
-                            <div class="portfolio-thumb">
+                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal8">
                                 <img src="img/portfolio/port8.jpg" alt="">
                             </div>
-                            <div class="portfolio-content">
+                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal8">
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal8">Creative Shop Work</a>
                                 </h3>
@@ -334,10 +334,10 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.1s">
-                            <div class="portfolio-thumb">
+                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal">
                                 <img src="img/portfolio/port1.jpg" alt="">
                             </div>
-                            <div class="portfolio-content">
+                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal">
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal">Neleman Cava</a>
                                 </h3>
@@ -379,10 +379,10 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.3s">
-                            <div class="portfolio-thumb">
+                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal3">
                                 <img src="img/portfolio/port3.jpg" alt="">
                             </div>
-                            <div class="portfolio-content">
+                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal3">
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal3">Jeff Burger</a>
                                 </h3>
@@ -424,10 +424,10 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat1">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.5s">
-                            <div class="portfolio-thumb">
+                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal4">
                                 <img src="img/portfolio/port4.jpg" alt="">
                             </div>
-                            <div class="portfolio-content">
+                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal4">
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal4">Delirio Tropical</a>
                                 </h3>
@@ -470,10 +470,10 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat3">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay="1.7s">
-                            <div class="portfolio-thumb">
+                            <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal2">
                                 <img src="img/portfolio/port2.jpg" alt="">
                             </div>
-                            <div class="portfolio-content">
+                            <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal2">
                                 <h3>
                                     <a href="#" data-toggle="modal" data-target="#popup-modal2">Sweet Lane</a>
                                 </h3>
