--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
                                                     <span>Services</span>Design, Art Direction, Website</li>
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
-                                                    <a href="www.mypocketcards.com">www.mypocketcards.com</a>
+                                                    <a target="_blank" href="www.mypocketcards.com">www.mypocketcards.com</a>
                                                 </li>
                                                 <li class="text-uppercase">
                                                     <span>Github</span>
-                                                    <a href="https://github.com/Learning-Fuze/c918_uberquizlet">https://github.com/Learning-Fuze/c918_uberquizlet</a>
+                                                    <a target="_blank" href="https://github.com/Learning-Fuze/c918_uberquizlet">https://github.com/Learning-Fuze/c918_uberquizlet</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -243,13 +243,13 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4">
                         <div class="portfolio-wrapper mb-30 wow fadeIn" data-wow-delay=".7s">
                             <div class="portfolio-thumb" data-toggle="modal" data-target="#popup-modal7">
-                                <img src="img/portfolio/port7.jpg" alt="">
+                                <img src="img/inventory.png" alt="">
                             </div>
                             <div class="portfolio-content" data-toggle="modal" data-target="#popup-modal7">
                                 <h3>
-                                    <a href="#" data-toggle="modal" data-target="#popup-modal7">Beautifully Designed</a>
+                                    <a href="#" data-toggle="modal" data-target="#popup-modal7">Inventory Manager</a>
                                 </h3>
-                                <span>Design, Web</span>
+                                <span>A content management system that helps you keep track of inventory products by allowing you to create, read, update, delete functionality</span>
                             </div>
                         </div>
                         <!-- Modal content start -->
@@ -276,7 +276,11 @@
                                                     <span>Services</span>Design, Art Direction, Website</li>
                                                 <li class="text-uppercase">
                                                     <span>Website</span>
-                                                    <a href="#">www.project.com</a>
+                                                    <a target="_blank" href="brandontravispark.com/inventory-manager-cms">www.brandontravispark.com/inventory-manager-cms</a>
+                                                </li>
+                                                <li class="text-uppercase">
+                                                    <span>Github</span>
+                                                    <a target="_blank" href="https://github.com/brandon206/inventory-manager-cms">https://github.com/brandon206/inventory-manager-cms</a>
                                                 </li>
                                             </ul>
                                         </div>
